commit da main 1

--- a/arquivo2.html
+++ b/arquivo2.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Forçando Conflito Merge</h1>
+    <h1>Forçando Conflito Merge </h1>
+    <h2>Forçando Conflito 2.0</h2>
    
 </body>
 </html>
